--- a/Signin.html
+++ b/Signin.html
@@ -34,7 +34,7 @@
         </div>
         <div>
           <p>New to Milaap? Sign up now, it’s quick & free</p>
-          <button><a href="SignUp.html"></a> Sign Up</button>
+          <button><a href="SignUp.html">Sign Up</a></button>
         </div>
       </div>
     </div>
