--- a/navbar.html
+++ b/navbar.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <title>navbar</title>
     <style>
-        *{
+        * {
             margin: 0;
         }
-        #parent{
+
+        #parent {
             width: 100%;
             height: 75px;
             /* border: 2px dashed blue; */
             display: flex;
             justify-content: space-between;
-             box-shadow:  #f9e6ec 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px; 
+            box-shadow: #f9e6ec 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
         }
-        #navLeft{
+
+        #navLeft {
             width: 48%;
             height: 75px;
             /* border: 1px dashed red; */
             display: grid;
-            grid-template-columns: repeat(7,1fr);
+            grid-template-columns: repeat(7, 1fr);
             gap: 5px;
 
         }
-        #navRight{
+
+        #navRight {
             width: 35%;
             height: 75px;
             /* border: 1px dashed red; */
@@ -39,34 +43,47 @@
 
 
         }
-        #navRight>div:nth-child(1){
+
+        #navRight>div:nth-child(1) {
             height: 75px;
             width: 47%;
             /* border: 1px dotted rgb(18, 19, 19); */
 
         }
-        #navRight>div:nth-child(2){
+
+        #navRight>div:nth-child(2) {
             height: 75px;
             width: 15%;
             /* border: 1px dotted rgb(18, 19, 19); */
             margin-right: 90px;
         }
-        #navLeft>div:nth-child(7){
+
+        #navLeft>div:nth-child(7) {
             height: 75px;
-            border: 1px dotted red;
+            cursor: pointer;
+            /* margin-right: -200px; */
+            /* border: 1px dotted red; */
             /* width: 80%; */
-            /* margin-right: -100px */
+            /* margin-right: 10px */
             /* margin-left: -100px; */
+            /* padding-left: 30px; */
+            /* width: 200px; */
 
         }
-        #navLeft>div>img{
+        p {
+            cursor: pointer;
+        }
+
+        #navLeft>div>img {
             width: 100px;
             height: 41px;
             padding-top: 15px;
             padding-left: 20px;
             margin-right: 30px;
+            cursor: pointer;
         }
-        #navLeft>div>button{
+
+        #navLeft>div>button {
             width: 100%;
             height: 100%;
             background-color: white;
@@ -77,22 +94,25 @@
             /* margin: 0 -20px; */
 
         }
-        #navLeft>div>button:hover{
+
+        #navLeft>div>button:hover {
             width: 100%;
             height: 100%;
-            background-color:#f5f1f1;
+            background-color: #f5f1f1;
             cursor: pointer;
         }
-        #navRight>div>img{
+
+        #navRight>div>img {
             width: 50px;
             height: 50px;
             padding-left: 16px;
-            padding-top:12px;
-            padding-right:20px;
+            padding-top: 12px;
+            padding-right: 20px;
             cursor: pointer;
 
         }
-        #navRight>div>button{
+
+        #navRight>div>button {
             cursor: pointer;
             width: 100%;
             padding-top: 10px;
@@ -105,24 +125,74 @@
             margin-right: 10px;
             background-color: #9c3353;
             color: white;
-            border: 1px solid #9c3353 ;
+            border: 1px solid #9c3353;
             font-family: 'Poppins', sans-serif;
             font-weight: bold;
             font-size: large;
         }
-        #navRight>div>button:hover{
+
+        #navRight>div>button:hover {
             background-color: #982346;
             box-shadow: #9c3353 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
         }
-
-
+          /* toggle-button */
+        .toggle { 
+        position : relative ;
+        display : inline-block;
+        width : 77px;
+        height : 19.3px;
+        background-color: #9c3353;
+        border-radius: 20px;
+        border: 1px solid #9c3353;
+        padding-top: 3px;
+        /* padding-left: 12px; */
+        margin-top: 25px;
+        margin-left: 10px;
+        cursor: pointer;
+    }
+        /* toggle-ball */
+    .toggle:after {
+        content: '';
+        position: absolute;
+        width: 33px;
+        height: 33px;
+        border-radius: 50%;
+        background-color: white;
+        top : -5px;
+        left : -1px;
+        transition :  all 0.4s;
+        box-shadow: #f9e6ec 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+        /* padding-left: 10px; */
+    }
+           
+    /* Toggle text */
+    p {
+        font-family: Arial, Helvetica, sans-serif;
+        color:  #f4ebeb;
+        font-size: 13px;
+        padding-top: 1px;
+    }
+    /* movement of ball from left to right  */
+    .checkbox:checked + .toggle::after {
+        left : 48px;
+    }
+    .checkbox:checked + .toggle {
+        background-color: #9c3353;
+    }
+           
+    /* Checkbox vanished */
+    .checkbox {
+        display : none;
+    }
     </style>
 </head>
+
 <body>
     <div id="parent">
         <div id="navLeft">
             <div>
-                <img src="https://assets.milaap.org/assets/milaap-logo-tiny-4d3dbc4e55c2aaec351f0f376329c624236c4d6266b910f472684e70603f600d.png" alt="milapLogo">
+                <img src="https://assets.milaap.org/assets/milaap-logo-tiny-4d3dbc4e55c2aaec351f0f376329c624236c4d6266b910f472684e70603f600d.png"
+                    alt="milapLogo">
             </div>
             <div>
                 <button>Home</button>
@@ -140,6 +210,10 @@
                 <button>Contact us</button>
             </div>
             <div>
+                <input type="checkbox" id="switch" class="checkbox" />
+                <label for="switch" class="toggle">
+                    <p> &nbsp  INR &nbsp  &nbsp USD  </p>
+                </label>
 
             </div>
         </div>
@@ -148,10 +222,12 @@
                 <button>Start a fundraiser</button>
             </div>
             <div>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNTnKuFzx2Q3EqHYsrqQoVxWRxIu0A3pM8qADvlTxaHf2LCYJw" alt="logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNTnKuFzx2Q3EqHYsrqQoVxWRxIu0A3pM8qADvlTxaHf2LCYJw"
+                    alt="logo">
             </div>
 
         </div>
     </div>
 </body>
+
 </html>
