--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
             height: 80px;
             border-bottom: 2px solid rgb(185, 205, 205);
             display: flex;
+            cursor: pointer;
             /* border: 1px solid saddlebrown; */
             /* text-align: center; */
             align-items: center;
@@ -341,8 +342,8 @@
             add:"Milaap Social Ventures Pte. Ltd",
          }
          function addfun(){
-            if(country.innerText== "US"){
-               cdata.innerText= "yes";
+            if(country.innerText== "INDIA"){
+               cdata.innerText= "ACCEPTED";
                console.log("yes");
             }
          }
