--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            margin-top: 80px;
+            /* margin-top: 80px; */
             background-color: #9c3353;
         }
         #one{
