--- a/navbar.html
+++ b/navbar.html
@@ -40,6 +40,7 @@
             /* border: 1px dashed red; */
             display: flex;
             justify-content: space-between;
+            /* margin: auto; */
 
 
         }
